# Template-FDK

./: .dockerignore  .gitattributes  .gitignore  README.md
Code/: .gitignore  AUTHORS.md  CMakeLists.txt  README.md
Code/Designs/: CMakeLists.txt
Code/Designs/Template_PM-1.0/: CHANGELOG.md  CMakeLists.txt  README.md
Code/Designs/Template_PM-1.0/etc/: script_assemble.tcl  script_implement.tcl  script_synthesize.tcl
Code/Documentation/: CMakeLists.txt
Code/Documentation/Specifications/: CMakeLists.txt
Code/Documentation/Specifications/Handshaking_Credit-1.0/: CMakeLists.txt
Code/Documentation/Specifications/Handshaking_Credit-1.0/Illustrations/: Block Diagram - Overview #01.vsd
Code/Documentation/Specifications/Handshaking_OneWay-1.0/: CMakeLists.txt
Code/Documentation/Specifications/Handshaking_OneWay-1.0/Illustrations/: Block Diagram - Overview #01.vsd  Timing Diagram - Clock And Reset #01.json
Code/Documentation/Specifications/Handshaking_TwoWay-1.0/: CMakeLists.txt
Code/Documentation/Specifications/Handshaking_TwoWay-1.0/Illustrations/: Block Diagram - Overview #01.vsd  Timing Diagram - Clock And Reset #01.json  Timing Diagram - Data Transfer #01.json  Timing Diagram - Data Transfer #02.json  Timing Diagram - Data Transfer #03.json  Timing Diagram - Data Transfer #04.json
Code/Kernels/: CMakeLists.txt
Code/Miscellaneous/Encryption/: ieee_1735_2014_public_keys.v  ieee_1735_2014_public_keys.vhd  script_copy_only.tcl  script_copy_then_encrypt_ieee_1735_2014.tcl
Code/Miscellaneous/Packaging/Linux/DEBIAN/: prerm.in
Code/Repositories/: CMakeLists.txt
Code/Repositories/Boards/: CMakeLists.txt
Code/Repositories/Boards/Xilinx/: Alveo_U50.xdc
Code/Repositories/Components/: CMakeLists.txt
Code/Repositories/Components/Template_SV-1.0/: CHANGELOG.md  CMakeLists.txt  README.md
Code/Repositories/Components/Template_SV-1.0/etc/: script_package_ip_xact.tcl  script_simulate.tcl  script_synthesize.tcl
Code/Repositories/Components/Template_SV-1.0/src/constraints/: top_level.xdc  top_level_ooc.xdc
Code/Repositories/Components/Template_SV-1.0/src/models/: top_level.sv
Code/Repositories/Components/Template_SV-1.0/src/tests/: test_basic.svh  testbench.sv  tests_pkg.sv
Code/Repositories/Components/Template_SV-1.0/src/tests/environment/: env.svh  env_pkg.sv  scoreboard.svh  virtual_sequence.svh  virtual_sequencer.svh
Code/Repositories/Components/Template_SV-1.0/src/tests/hs1way_agents/: hs1way_io.sv  hs1way_master_pkg.sv  hs1way_slave_pkg.sv
Code/Repositories/Components/Template_SV-1.0/src/tests/hs2way_agents/: hs2way_io.sv  hs2way_master.svh  hs2way_master_driver.svh  hs2way_master_monitor.svh  hs2way_master_pkg.sv  hs2way_master_sequencer.svh  hs2way_sequence_child.svh  hs2way_sequence_item.svh  hs2way_sequence_parent.svh  hs2way_slave_pkg.sv
Code/Repositories/Components/Template_VHDL-1.0/: CHANGELOG.md  CMakeLists.txt  README.md
Code/Repositories/Components/Template_VHDL-1.0/etc/: script_package_ip_xact.tcl  script_simulate.tcl  script_synthesize.tcl
Code/Repositories/Components/Template_VHDL-1.0/src/models/: top_level.vhd
Code/Repositories/Components/Template_VHDL-1.0/src/tests/: testbench.vhd  testbench_pkg.vhd  testcases.vhd  testcases_pkg.vhd
Code/Repositories/Interfaces/: CMakeLists.txt
Code/Repositories/Interfaces/FIFO_Read-1.0/: CHANGELOG.md  CMakeLists.txt  README.md
Code/Repositories/Interfaces/FIFO_Read-1.0/etc/: script_package_ip_xact.tcl
Code/Repositories/Interfaces/FIFO_Write-1.0/: CHANGELOG.md  CMakeLists.txt  README.md
Code/Repositories/Interfaces/FIFO_Write-1.0/etc/: script_package_ip_xact.tcl
Code/Repositories/Interfaces/Handshaking_Credit-1.0/: CHANGELOG.md  CMakeLists.txt  README.md
Code/Repositories/Interfaces/Handshaking_Credit-1.0/etc/: script_package_ip_xact.tcl
Code/Repositories/Interfaces/Handshaking_OneWay-1.0/: CHANGELOG.md  CMakeLists.txt  README.md
Code/Repositories/Interfaces/Handshaking_OneWay-1.0/etc/: script_package_ip_xact.tcl
Code/Repositories/Interfaces/Handshaking_TwoWay-1.0/: AUTHORS.md  CHANGELOG.md  CMakeLists.txt  README.md
Code/Repositories/Interfaces/Handshaking_TwoWay-1.0/etc/: script_package_ip_xact.tcl
DevOps/Bare-Metal/: .gitignore  GeneratePackagesForLinuxUsingGnuCompiler.bash  GeneratePackagesForLinuxUsingIntelOneAPI.bash  GeneratePackagesForLinuxUsingLlvmClang.bash  GeneratePackagesForWindowsUsingIntelOneAPI.cmd  GeneratePackagesForWindowsUsingMicrosoftVisualStudio.cmd  SetupTools.bash  SetupTools.cmd
